--- a/Manpower_MVC/Views/Owner/Print.cshtml
+++ b/Manpower_MVC/Views/Owner/Print.cshtml
@@ -36,7 +36,7 @@
                     傳真
                 </td>
                 <td style="border-bottom: 1px solid black">
-                    @Html.DisplayNameFor(model => model.ConPerson)
+                    連絡人
                 </td>
                 <td style="border-bottom: 1px solid black">
                     電話
@@ -45,7 +45,7 @@
                     手機
                 </td>
                 <td style="border-bottom: 1px solid black">
-                    @Html.DisplayNameFor(model => model.UnifiedNum)
+                    統一編號
                 </td>
             </tr>
 
